--- a/src/pages/TeacherList/styles.css
+++ b/src/pages/TeacherList/styles.css
@@ -3,70 +3,27 @@
   height: 100vh;
 }
 
-.page-header {
-  display: flex;
-  flex-direction: column;
-  background: var(--color-primary);
-}
-
-.page-header .top-bar-container {
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--color-text-in-primary);
-  padding: 1.6rem 0;
-}
-
-.page-header .top-bar-container a {
-  height: 3.2rem;
-  transition: opacity 0.2s;
-}
-
-.page-header .top-bar-container a:hover {
-  opacity: 0.6;
-}
-
-.page-header .top-bar-container > img {
-  height: 1.6rem;
-}
-
-.page-header .header-content {
-  width: 90%;
-  margin: 0 auto;
-  position: relative;
-  margin: 3.2rem auto;
-}
-
-.page-header .header-content strong {
-  font: 700 3.6rem Archivo;
-  line-height: 4.2rem;
-  color: var(--color-title-in-primary);
-
-}
-
-#search-teacher {
+#search-teachers {
   margin-top: 3.2rem;
 }
 
-#search-teacher label {
+#search-teachers label {
   color: var(--color-text-in-primary);
 }
 
-#search-teacher .input-block {
+#search-teachers .input-block {
   position: relative;
 }
 
-#search-teacher .input-block + .input-block {
+#search-teachers .input-block + .input-block {
   margin-top: 1.4rem;
 }
 
-#search-teacher .input-block label {
+#search-teachers .input-block label {
   font-size: 1.4rem;
 }
 
-#search-teacher .input-block input {
+#search-teachers .input-block input {
   width: 100%;
   height: 5.6rem;
   margin-top: 0.8rem;
@@ -78,7 +35,7 @@
   font: 1.6rem Archivo;
 }
 
-#search-teacher .input-block:focus-within::after {
+#search-teachers .input-block:focus-within::after {
   width: calc(100% - 3.2rem);
   height: 2px;
   content: '';
@@ -87,4 +44,22 @@
   left: 1.6rem;
   right: 1.6rem;
   bottom: 0;
+}
+
+@media (min-width: 700px) {
+  #page-teacher-list {
+    max-width: 100%;
+  }
+
+  #search-teachers {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 16px;
+    position: absolute;
+    bottom: -28px;
+  }
+
+  #search-teachers .input-block + .input-block {
+    margin-top: 0;
+  }
 }
